# facet

./: ARCHITECTURE.md  DEMO_DATA.md
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
backend/app/: config.py  embeddings.py  llm.py  main.py  qdrant_client.py  schemas.py
backend/app/agents/: access_agent.py  grader_agent.py  healer_agent.py  retrieval_agent.py
backend/app/indexing/: chunker.py  ingest.py
backend/app/rag/: cache.py  events.py  generator.py  orchestrator.py
backend/data/ceo/: board_minutes_q3.md  exec_compensation.md  fundraise_plans_2026.md  project_nightingale_brief.md  quarterly_financials.md  regulatory_inquiry_response.md
backend/data/employee/: code_of_conduct.md  company_handbook.md  expense_policy.md  health_benefits_overview.md  holiday_policy.md  it_setup_guide.md  remote_work_policy.md  security_basics.md
backend/data/hr/: attrition_report.md  benefits_summary.md  headcount_plan_2026.md  performance_review_framework.md  q4_hiring_pipeline.md  salary_bands_2025.md
backend/data/manager/: engineering_okrs_q1.md  oncall_rotation.md  payments_team_roadmap_h1.md  platform_team_budget.md  team_lead_handbook.md
backend/scripts/: debug_orchestrator.py  extract_corpus.py  init_qdrant.py  verify_ingest.py
backend/tests/: test_access_agent.py  test_acl.py  test_cache.py  test_embeddings.py  test_generator.py  test_grader.py  test_healer.py  test_orchestrator.py
frontend/: package-lock.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/lib/: roles.ts  sse.ts
(+1 files in other folders)
