[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facet-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "qdrant-client",
    "sentence-transformers",
    "groq",
    "llama-index",
    "llama-index-retrievers-bm25",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "sse-starlette",
    "numpy",
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
